Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128560

Lancelot test custom material error

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.8.2, 6.9.0 FF
    • 6.8
    • Quick: 3D
    • None
    • Linux/X11
    • 71476d13d (dev), 5d34b44fc (6.8)

    Description

      06:29:09 PASS : tst_Quick3D::testRendering(custommaterial/custom_depthDrawModes_prepass.qml)
      06:29:09 QSpirvCompiler: Failed to parse shader
      06:29:09 Failed to compile fragment shader: ERROR: :65: 'qt_ambientLightProcessor' : no matching overloaded function found
      06:29:09 ERROR: :65: '' : compilation terminated
      06:29:09 ERROR: 2 compilation errors. No code generated.
      06:29:09
      06:29:09 "custom material -->customdiffusespecular.vert>custom_fresnel_scalebias.frag:8ab20ecbea6d212cf5b7b368f1a4faefbcde74f0;hasLighting=true;hasIbl=true;lightCount=0;light0ShadowMapSize=0;light1ShadowMapSize=0;light2ShadowMapSize=0;light3ShadowMapSize=0;light4ShadowMapSize=0;light5ShadowMapSize=0;light6ShadowMapSize=0;light7ShadowMapSize=0;light8ShadowMapSize=0;light9ShadowMapSize=0;light10ShadowMapSize=0;light11ShadowMapSize=0;light12ShadowMapSize=0;light13ShadowMapSize=0;light14ShadowMapSize=0;light0SoftShadowQuality=0;light1SoftShadowQuality=0;light2SoftShadowQuality=0;light3SoftShadowQuality=0;light4SoftShadowQuality=0;light5SoftShadowQuality=0;light6SoftShadowQuality=0;light7SoftShadowQuality=0;light8SoftShadowQuality=0;light9SoftShadowQuality=0;light10SoftShadowQuality=0;light11SoftShadowQuality=0;light12SoftShadowQuality=0;light13SoftShadowQuality=0;light14SoftShadowQuality=0;=true;vertexColorRedMask=0;vertexColorGreenMask=0;vertexColorBlueMask=0;vertexColorAlphaMask=0;specularModel=Default;;diffuseMap={;;;;;};emissiveMap={;;;;;};specularMap={;;;;;};baseColorMap={;;;;;};bumpMap={;;;;;};specularAmountMap={;;;;;};normalMap={;;;;;};clearcoatNormalMap={;;;;;};opacityMap={;;;;;};roughnessMap={;;;;;};metalnessMap={;;;;;};occlusionMap={;;;;;};translucencyMap={;;;;;};heightMap={;;;;;};clearcoatMap={;;;;;};clearcoatRoughnessMap={;;;;;};transmissionMap={;;;;;};thicknessMap={;;;;;};opacityMap_channel=R;roughnessMap_channel=R;metalnessMap_channel=R;occlusionMap_channel=R;translucencyMap_channel=R;heightMap_channel=R;clearcoatMap_channel=R;clearcoatRoughnessMap_channel=R;transmissionMap_channel=R;thicknessMap_channel=R;baseColorMap_channel=R;specularAmountMap_channel=R;=R;boneCount=0;overridesPosition=true;alphaMode=Default;;vertexAttributes={position=true;normal=true;texcoord0=true;texcoord1=true;tangent=true;binormal=true;;}};targetCount=0;targetPositionOffset=255;targetNormalOffset=255;targetTangentOffset=255;targetBinormalOffset=255;targetTexCoord0Offset=255;targetTexCoord1Offset=255;targetColorOffset=255;debugMode=0;viewCount=1"
      06:29:09
      06:29:09 QSpirvCompiler: Failed to parse shader
      06:29:09 Failed to compile fragment shader: ERROR: :65: 'qt_ambientLightProcessor' : no matching overloaded function found
      06:29:09 ERROR: :65: '' : compilation terminated
      06:29:09 ERROR: 2 compilation errors. No code generated.
      06:29:09
      06:29:09 "custom material -->customdiffusespecular.vert>custom_fresnel_scalebias.frag:8ab20ecbea6d212cf5b7b368f1a4faefbcde74f0;hasLighting=true;hasIbl=true;lightCount=0;light0ShadowMapSize=0;light1ShadowMapSize=0;light2ShadowMapSize=0;light3ShadowMapSize=0;light4ShadowMapSize=0;light5ShadowMapSize=0;light6ShadowMapSize=0;light7ShadowMapSize=0;light8ShadowMapSize=0;light9ShadowMapSize=0;light10ShadowMapSize=0;light11ShadowMapSize=0;light12ShadowMapSize=0;light13ShadowMapSize=0;light14ShadowMapSize=0;light0SoftShadowQuality=0;light1SoftShadowQuality=0;light2SoftShadowQuality=0;light3SoftShadowQuality=0;light4SoftShadowQuality=0;light5SoftShadowQuality=0;light6SoftShadowQuality=0;light7SoftShadowQuality=0;light8SoftShadowQuality=0;light9SoftShadowQuality=0;light10SoftShadowQuality=0;light11SoftShadowQuality=0;light12SoftShadowQuality=0;light13SoftShadowQuality=0;light14SoftShadowQuality=0;=true;vertexColorRedMask=0;vertexColorGreenMask=0;vertexColorBlueMask=0;vertexColorAlphaMask=0;specularModel=Default;;diffuseMap={;;;;;};emissiveMap={;;;;;};specularMap={;;;;;};baseColorMap={;;;;;};bumpMap={;;;;;};specularAmountMap={;;;;;};normalMap={;;;;;};clearcoatNormalMap={;;;;;};opacityMap={;;;;;};roughnessMap={;;;;;};metalnessMap={;;;;;};occlusionMap={;;;;;};translucencyMap={;;;;;};heightMap={;;;;;};clearcoatMap={;;;;;};clearcoatRoughnessMap={;;;;;};transmissionMap={;;;;;};thicknessMap={;;;;;};opacityMap_channel=R;roughnessMap_channel=R;metalnessMap_channel=R;occlusionMap_channel=R;translucencyMap_channel=R;heightMap_channel=R;clearcoatMap_channel=R;clearcoatRoughnessMap_channel=R;transmissionMap_channel=R;thicknessMap_channel=R;baseColorMap_channel=R;specularAmountMap_channel=R;=R;boneCount=0;overridesPosition=true;alphaMode=Default;;vertexAttributes={position=true;normal=true;texcoord0=true;;tangent=true;binormal=true;;}};targetCount=0;targetPositionOffset=255;targetNormalOffset=255;targetTangentOffset=255;targetBinormalOffset=255;targetTexCoord0Offset=255;targetTexCoord1Offset=255;targetColorOffset=255;debugMode=0;viewCount=1"
      06:29:09
      06:29:09 PASS : tst_Quick3D::testRendering(custommaterial/custom_fresnel_scalebias.qml)
      06:29:09 PASS : tst_Quick3D::testRendering(custommaterial/custom_occlusion.qml)
      06:29:09 QSpirvCompiler: Failed to parse shader
      06:29:09 Failed to compile fragment shader: ERROR: :71: 'qt_ambientLightProcessor' : no matching overloaded function found
      06:29:09 ERROR: :71: '' : compilation terminated
      06:29:09 ERROR: 2 compilation errors. No code generated.
      06:29:09
      06:29:09 "custom material -->customdiffusespecular.vert>custom_trasmission.frag:01d8b75baa5fa5b95f3aef7ba07e2acb75bc19f6;hasLighting=true;hasIbl=true;lightCount=0;light0ShadowMapSize=0;light1ShadowMapSize=0;light2ShadowMapSize=0;light3ShadowMapSize=0;light4ShadowMapSize=0;light5ShadowMapSize=0;light6ShadowMapSize=0;light7ShadowMapSize=0;light8ShadowMapSize=0;light9ShadowMapSize=0;light10ShadowMapSize=0;light11ShadowMapSize=0;light12ShadowMapSize=0;light13ShadowMapSize=0;light14ShadowMapSize=0;light0SoftShadowQuality=0;light1SoftShadowQuality=0;light2SoftShadowQuality=0;light3SoftShadowQuality=0;light4SoftShadowQuality=0;light5SoftShadowQuality=0;light6SoftShadowQuality=0;light7SoftShadowQuality=0;light8SoftShadowQuality=0;light9SoftShadowQuality=0;light10SoftShadowQuality=0;light11SoftShadowQuality=0;light12SoftShadowQuality=0;light13SoftShadowQuality=0;light14SoftShadowQuality=0;vertexColorRedMask=0;vertexColorGreenMask=0;vertexColorBlueMask=0;vertexColorAlphaMask=0;specularModel=Default;;diffuseMap={;;;;;};emissiveMap={;;;;;};specularMap={;;;;;};baseColorMap={;;;;;};bumpMap={;;;;;};specularAmountMap={;;;;;};normalMap={;;;;;};clearcoatNormalMap={;;;;;};opacityMap={;;;;;};roughnessMap={;;;;;};metalnessMap={;;;;;};occlusionMap={;;;;;};translucencyMap={;;;;;};heightMap={;;;;;};clearcoatMap={;;;;;};clearcoatRoughnessMap={;;;;;};transmissionMap={;;;;;};thicknessMap={;;;;;};opacityMap_channel=R;roughnessMap_channel=R;metalnessMap_channel=R;occlusionMap_channel=R;translucencyMap_channel=R;heightMap_channel=R;clearcoatMap_channel=R;clearcoatRoughnessMap_channel=R;transmissionMap_channel=R;thicknessMap_channel=R;baseColorMap_channel=R;specularAmountMap_channel=R;=R;boneCount=0;overridesPosition=true;alphaMode=Default;;vertexAttributes={position=true;normal=true;texcoord0=true;;tangent=true;binormal=true;;}};targetCount=0;targetPositionOffset=255;targetNormalOffset=255;targetTangentOffset=255;targetBinormalOffset=255;targetTexCoord0Offset=255;targetTexCoord1Offset=255;targetColorOffset=255;transmissionEnabled=true;debugMode=0;viewCount=1"
      06:29:09
      06:29:09 PASS : tst_Quick3D::testRendering(custommaterial/custom_trasmission.qml)
      06:29:09 PASS : tst_Quick3D::testRendering(custommaterial/customblend.qml)
      06:29:09 QSpirvCompiler: Failed to parse shader
      06:29:09 Failed to compile fragment shader: ERROR: :76: 'qt_ambientLightProcessor' : no matching overloaded function found
      06:29:09 ERROR: :76: '' : compilation terminated
      06:29:09 ERROR: 2 compilation errors. No code generated.
      06:29:09
      06:29:09 "custom material -->customdiffusespecular.vert>customclearcoat.frag:64f82e1f1d3338f3a4fb15adb2422f8f1a1ed82c;hasLighting=true;hasIbl=true;lightCount=0;light0ShadowMapSize=0;light1ShadowMapSize=0;light2ShadowMapSize=0;light3ShadowMapSize=0;light4ShadowMapSize=0;light5ShadowMapSize=0;light6ShadowMapSize=0;light7ShadowMapSize=0;light8ShadowMapSize=0;light9ShadowMapSize=0;light10ShadowMapSize=0;light11ShadowMapSize=0;light12ShadowMapSize=0;light13ShadowMapSize=0;light14ShadowMapSize=0;light0SoftShadowQuality=0;light1SoftShadowQuality=0;light2SoftShadowQuality=0;light3SoftShadowQuality=0;light4SoftShadowQuality=0;light5SoftShadowQuality=0;light6SoftShadowQuality=0;light7SoftShadowQuality=0;light8SoftShadowQuality=0;light9SoftShadowQuality=0;light10SoftShadowQuality=0;light11SoftShadowQuality=0;light12SoftShadowQuality=0;light13SoftShadowQuality=0;light14SoftShadowQuality=0;=true;vertexColorRedMask=0;vertexColorGreenMask=0;vertexColorBlueMask=0;vertexColorAlphaMask=0;specularModel=Default;;diffuseMap={;;;;;};emissiveMap={;;;;;};specularMap={;;;;;};baseColorMap={;;;;;};bumpMap={;;;;;};specularAmountMap={;;;;;};normalMap={;;;;;};clearcoatNormalMap={;;;;;};opacityMap={;;;;;};roughnessMap={;;;;;};metalnessMap={;;;;;};occlusionMap={;;;;;};translucencyMap={;;;;;};heightMap={;;;;;};clearcoatMap={;;;;;};clearcoatRoughnessMap={;;;;;};transmissionMap={;;;;;};thicknessMap={;;;;;};opacityMap_channel=R;roughnessMap_channel=R;metalnessMap_channel=R;occlusionMap_channel=R;translucencyMap_channel=R;heightMap_channel=R;clearcoatMap_channel=R;clearcoatRoughnessMap_channel=R;transmissionMap_channel=R;thicknessMap_channel=R;baseColorMap_channel=R;specularAmountMap_channel=R;=R;boneCount=0;overridesPosition=true;alphaMode=Default;;vertexAttributes={position=true;normal=true;texcoord0=true;texcoord1=true;tangent=true;binormal=true;;}};targetCount=0;targetPositionOffset=255;targetNormalOffset=255;targetTangentOffset=255;targetBinormalOffset=255;targetTexCoord0Offset=255;targetTexCoord1Offset=255;targetColorOffset=255;clearcoatEnabled=true;debugMode=0;viewCount=1"
      06:29:09
      06:29:09 QSpirvCompiler: Failed to parse shader
      06:29:09 Failed to compile fragment shader: ERROR: :76: 'qt_ambientLightProcessor' : no matching overloaded function found
      06:29:09 ERROR: :76: '' : compilation terminated
      06:29:09 ERROR: 2 compilation errors. No code generated.
      06:29:09
      06:29:09 "custom material -->customdiffusespecular.vert>customclearcoat.frag:64f82e1f1d3338f3a4fb15adb2422f8f1a1ed82c;hasLighting=true;hasIbl=true;lightCount=0;light0ShadowMapSize=0;light1ShadowMapSize=0;light2ShadowMapSize=0;light3ShadowMapSize=0;light4ShadowMapSize=0;light5ShadowMapSize=0;light6ShadowMapSize=0;light7ShadowMapSize=0;light8ShadowMapSize=0;light9ShadowMapSize=0;light10ShadowMapSize=0;light11ShadowMapSize=0;light12ShadowMapSize=0;light13ShadowMapSize=0;light14ShadowMapSize=0;light0SoftShadowQuality=0;light1SoftShadowQuality=0;light2SoftShadowQuality=0;light3SoftShadowQuality=0;light4SoftShadowQuality=0;light5SoftShadowQuality=0;light6SoftShadowQuality=0;light7SoftShadowQuality=0;light8SoftShadowQuality=0;light9SoftShadowQuality=0;light10SoftShadowQuality=0;light11SoftShadowQuality=0;light12SoftShadowQuality=0;light13SoftShadowQuality=0;light14SoftShadowQuality=0;=true;vertexColorRedMask=0;vertexColorGreenMask=0;vertexColorBlueMask=0;vertexColorAlphaMask=0;specularModel=Default;;diffuseMap={;;;;;};emissiveMap={;;;;;};specularMap={;;;;;};baseColorMap={;;;;;};bumpMap={;;;;;};specularAmountMap={;;;;;};normalMap={;;;;;};clearcoatNormalMap={;;;;;};opacityMap={;;;;;};roughnessMap={;;;;;};metalnessMap={;;;;;};occlusionMap={;;;;;};translucencyMap={;;;;;};heightMap={;;;;;};clearcoatMap={;;;;;};clearcoatRoughnessMap={;;;;;};transmissionMap={;;;;;};thicknessMap={;;;;;};opacityMap_channel=R;roughnessMap_channel=R;metalnessMap_channel=R;occlusionMap_channel=R;translucencyMap_channel=R;heightMap_channel=R;clearcoatMap_channel=R;clearcoatRoughnessMap_channel=R;transmissionMap_channel=R;thicknessMap_channel=R;baseColorMap_channel=R;specularAmountMap_channel=R;=R;boneCount=0;overridesPosition=true;alphaMode=Default;;vertexAttributes={position=true;normal=true;texcoord0=true;;tangent=true;binormal=true;;}};targetCount=0;targetPositionOffset=255;targetNormalOffset=255;targetTangentOffset=255;targetBinormalOffset=255;targetTexCoord0Offset=255;targetTexCoord1Offset=255;targetColorOffset=255;clearcoatEnabled=true;debugMode=0;viewCount=1"
      06:29:09

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sadegh Sadegh Taghavi
            jokarlss Jonas Karlsson
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes