Fix arguments mismatch in the custom material

Fixes A mismatch between the custom material shader functions arguments when the main custom shader
function uses some Variable e.g. CLEARCOAT_AMOUNT, FRESNEL_SCALE, TRANSMISSION_FACTOR...

Fixes: QTBUG-128560
Change-Id: I05df2f4ee358e3a128095b377de958146a41624d
Reviewed-by: Christian Strømme <christian.stromme@qt.io>
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
(cherry picked from commit 71476d13d01ca26de0e8460b2f587a07c105abab)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>